[package]
name = "dart_avif_decoder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.6.0"
libdav1d-sys = { version = "0.5", git = "https://github.com/telosnex/libavif-rs.git" }
libavif-sys = { version = "0.14.3", git = "https://github.com/telosnex/libavif-rs.git", default-features = false, features = [
    "codec-dav1d",
    "codec-rav1e",
] }
lazy_static = "1.4.0"
cmake = "=0.1.48"
proc-macro2 = "=1.0.79"
